# coboard_rust

./: run-dev.sh
backend/: Cargo.toml
backend/src/: board.rs  board_server.rs  main.rs  socket_endpoint.rs
common/: Cargo.toml
common/src/: lib.rs
docker/dev/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: Cargo.toml  index.html
frontend/assets/styles/: controls.css  controls.rs  cursor_box.css  cursors.css  main.css  spinner.css
frontend/src/: canvas.rs  client.rs  line_drawing.rs  main.rs  use_client.rs
frontend/src/board/: camera.rs  canvas.rs  controls.rs  cursor.rs  cursor_box.rs  mod.rs
frontend/src/shaders/: fragment_shader.glsl  vertex_shader.glsl
frontend/src/webgl_utils/: line_buffer.rs  mod.rs  program.rs  single_line.rs
