[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-macros = "0.4.1"
common = {path = "../common"}
futures-util = "0.3.30"
rand = "0.8.5"
reqwest = "0.12.5"
serde = "1.0.203"
serde_cbor = "0.11.2"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
